--- a/MediSync/src/main/resources/application.properties
+++ b/MediSync/src/main/resources/application.properties
@@ -14,8 +14,5 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 logging.level.org.flywaydb.core=DEBUG
 
-# Configuração RabbitMQ
-spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
-spring.rabbitmq.port=${RABBITMQ_PORT:5672}
-spring.rabbitmq.username=${RABBITMQ_USER:guest}
-spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
