--- a/notificacao-service/src/main/resources/application.properties
+++ b/notificacao-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=medisync
+spring.application.name=notificacao-service
 
 #Configurações PostgreSQL #
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
