--- a/pom.xml
+++ b/pom.xml
@@ -31,4 +31,24 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<arg>-parameters</arg>
+					</compilerArgs>
+					<basedir/>
+					<mainOutputDirectory/>
+					<mojoStatusPath/>
+					<outputDirectory/>
+					<projectArtifact/>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
