fix: ajuste docker-compose.yml e application.properties

--- a/app-service/src/main/resources/application.properties
+++ b/app-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=medisync
+spring.application.name=app
 
 #ConfiguraÃ§Ãµes PostgreSQL #
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
@@ -18,3 +18,9 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
 spring.graphql.graphiql.enabled=true
+
+# Configuração RabbitMQ
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USER:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
